--- a/tests/PageAccueil.html
+++ b/tests/PageAccueil.html
@@ -7,30 +7,33 @@
 	<title>Home Be One</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="Style.css" />
+	<link rel="stylesheet" href="css/Style.css" />
 
 </head>
 
 <!-- Page d'accueil aux utilisateurs non connectés -->
 
 <body>
-		
+
 		<!-- Header -->
 		<header id="header" class="alt">
-			<a href="PageAccueil.html" class="logo"><strong>Home Be One</strong> <span>by Domisep</span></a>
-			<em><a  href="http://localhost/tests/home_be_one/sessions_start_tuto_cible.php" id="inscription"> S'inscrire</a></br></em>
-			<em><a  href="http://localhost/tests/home_be_one/connexion_gustave.php" id="connexion">Se connecter</a></br></em>
-
+			<a href="PageAccueil.html" class="logo"><strong>Home Be One</strong></a>
+			<div class="sign">
+				<ul>
+					<li><a href="#"><strong>/Sign up</strong></a>
+					<li><a href="#"><strong>/Sign in</strong></a>
+				</ul>
+			</div>
 		</header>
 
 		<!-- Banner -->
 		<section id="banner">
 			<div class="inner">
 				<header class="major">
-					<h1>Welcome on Home Be One's website</h1>
+					<h1>Welcome to Home Be One's website</h1>
 				</header>
 				<div class="content">
-					<p>Ready to control everything?<br></br>
+					<p>Ready to control everything?<br>
 					The Force is no longer a dream.</p>
 				</div>
 			</div>
