--- a/tests/alimentation_catalogue.html
+++ b/tests/alimentation_catalogue.html
@@ -11,7 +11,7 @@
       <label>Ajoutez la description du produit : <input type="text" name="description_produit" /></label><br/>
       <label>Indiquez son prix : <input type="text" name="prix_produit" /></label><br/>
       <label>Choisissez l'image du produit : <input type="file" name="image_produit" /></label><br/>
-      <input type="submit" name="ajout_produit" value="Ajouter">
+      <input type="submit" name="ajout_produit" value="Ajouter"/>
     </form>
 
   </body>
